--- a/wui/src/app/views/storage/addstorage.html.erb
+++ b/wui/src/app/views/storage/addstorage.html.erb
@@ -1,42 +1,51 @@
 <%- content_for :title do -%>
-  Add Storage
+  Add Storage Pool
 <%- end -%>
 <%- content_for :description do -%>
-  Select storage pools from the list below to add to the <%= @hardware_pool.name %> hardware pool.
+  Choose a storage pool selection below
 <%- end -%>
 
-<!-- we'll need this when we combine add/create for storage
 <div id="toolbar_nav">
 <ul>
-    <li class="current" id="unassigned_tab"><a href="#" onClick = "show_unassigned()"><img style="vertical-align:middle;" src="" />&nbsp;&nbsp;Unassigned Storage (<%= @unassigned %>)</a></li>
-    <li id="assigned_tab"><a href="#" onClick = "show_assigned()"><img style="vertical-align:middle;" src="" />&nbsp;&nbsp;Assigned Storage (<%= @assigned %>)</a></li>
+    <li class="current" id="new_tab"><a href="#" onClick = "show_new()"><img style="vertical-align:middle;" src="" />&nbsp;&nbsp;Add New Pool</a></li>
+    <li id="add_tab"><a href="#" onClick = "show_add()"><img style="vertical-align:middle;" src="" />&nbsp;&nbsp;Import Existing Pool(s)</a></li>
 </ul>
 </div>
-  function show_unassigned()
-  {
-      $("#assigned_tab").removeClass('current');
-      $("#unassigned_tab").addClass('current');
-      $("#addstorage_assigned_grid_div").hide()
-      $("#addstorage_unassigned_grid_div").show()
-  }
-  function show_assigned()
-  {
-      $("#assigned_tab").addClass('current');
-      $("#unassigned_tab").removeClass('current');
-      $("#addstorage_unassigned_grid_div").hide()
-      $("#addstorage_assigned_grid_div").show()
-  }
-  $("#addstorage_assigned_grid_div").hide()
--->
-  <div class="panel_header"></div>
-  <div class="dialog_body">
-       <%= render :partial => "/storage/grid", :locals => { :table_id => "addstorage_grid",
-           :hwpool => nil, :exclude_id => @hardware_pool.id,
-           :on_select => "false" } %>
-  </div>
-</div>
-<%= popup_footer("add_storage('#{url_for :controller => 'hardware', 
-                                        :action => 'add_storage', 
-                                        :id => @hardware_pool}')", 
-                 "Add Selected Storage Pools") %>
 
+<div class="panel_header"></div>
+<div id="add_panel">
+  <div class="dialog_body_small">
+    <%= render :partial => "/storage/grid", :locals => { :table_id => "addstorage_grid",
+               :hwpool => nil, :exclude_id => @hardware_pool.id,
+               :on_select => "false" } %>
+  </div>
+  <%= popup_footer("add_storage('#{url_for :controller => 'hardware', 
+                                           :action => 'add_storage', 
+                                          :id => @hardware_pool}')", 
+                   "Add Storage Pool(s)") %>
+</div>
+
+<div id="new_panel">
+    <%= render :partial => "/storage/new", 
+               :locals => { :hardware_pool => @hardware_pool,
+                            :storage_types => @storage_types} %>
+</div>
+
+<script type="text/javascript">
+  function show_new()
+  {
+      $("#add_tab").removeClass('current');
+      $("#new_tab").addClass('current');
+      $("#add_panel").hide()
+      $("#new_panel").show()
+
+  }
+  function show_add()
+  {
+      $("#new_tab").removeClass('current');
+      $("#add_tab").addClass('current');
+      $("#new_panel").hide()
+      $("#add_panel").show()
+  }
+  $("#add_panel").hide()
+</script>
