added logic around when to show the 'clear host' link:
link will show unless:
1) there's already a pending clear VM task for this host or
2) host is disabled and there are no VMs running or
3) host is unavailable

--- a/wui/src/app/views/host/show.rhtml
+++ b/wui/src/app/views/host/show.rhtml
@@ -3,18 +3,20 @@
 <%- end -%>
 <%- content_for :action_links do -%>
   <%if @can_modify -%>
-    <%if @host.is_disabled.nil? or @host.is_disabled == 0  -%>
-      <a href="#" onClick="host_action('disable')">
-        <%= image_tag "icon_suspend.png" %> Disable Host
-      </a> 
-    <% else -%>
+    <%if @host.disabled?  -%>
       <a href="#" onClick="host_action('enable')">
         <%= image_tag "icon_start.png" %> Enable Host
       </a> 
+    <% else -%>
+      <a href="#" onClick="host_action('disable')">
+        <%= image_tag "icon_suspend.png" %> Disable Host
+      </a> 
     <% end -%>
-    <a href="#" onClick="host_action('clear_vms')">
-      <%= image_tag "icon_x.png" %> Clear VMs
-    </a> 
+    <%if @host.is_clear_task_valid? -%>
+      <a href="#" onClick="host_action('clear_vms')">
+        <%= image_tag "icon_x.png" %> Clear VMs
+      </a> 
+    <% end -%>
   <%- end -%>
 <%- end -%>
 <script type="text/javascript">
