--- a/wui/src/app/views/host/addhost.html.erb
+++ b/wui/src/app/views/host/addhost.html.erb
@@ -8,7 +8,10 @@
 <div class="panel_header"></div>
 <div class="dialog_body">
   <%= render :partial => "/host/grid", :locals => { :table_id => "addhosts_grid",
-             :hwpool => nil, :exclude_id => @hardware_pool.id,
+             :hwpool => nil,
+             :exclude_pool => @hardware_pool.id,
+             :exclude_host => nil,
+             :checkboxes => true,
              :on_select => "load_widget_select",
              :on_deselect => "load_widget_deselect",
              :on_hover => "load_widget_hover",
