--- a/wui/src/app/views/storage/add.rhtml
+++ b/wui/src/app/views/storage/add.rhtml
@@ -3,7 +3,7 @@
 <div class="dialog_body_small">
 <div class="panel_header"></div>
   <%= render :partial => "/storage/grid", :locals => { :table_id => "addstorage_grid",
-             :hwpool => nil, :exclude_id => @hardware_pool.id,
+             :hwpool => nil, :exclude_pool => @hardware_pool.id,
              :on_select => "false" } %>
 </div>
 <%= popup_footer("add_storage('#{url_for :controller => 'hardware', 
