--- a/wui/src/app/views/hardware/show_storage.rhtml
+++ b/wui/src/app/views/hardware/show_storage.rhtml
@@ -66,7 +66,7 @@
   <div class="data_section">
        <%= render :partial => "/storage/grid", :locals => { :table_id => "storage_grid",
                                                             :hwpool => @pool,
-                                                            :exclude_id => nil,
+                                                            :exclude_pool => nil,
                                                             :on_select => "storage_select" } %>
   </div>
 
