incorporated tallen's notification UI enhancements.
I've replaced all instances of "alert($foo)" with the jgrowl implementation, and I've increased the default visibility duration to 10 seconds. This can still be customized on a per-message basis if we eventually want to change the behavior based on the context of the message.

--- a/wui/src/app/views/hardware/move.rhtml
+++ b/wui/src/app/views/hardware/move.rhtml
@@ -27,7 +27,7 @@
               $("#<%= @resource_type %>_grid").flexReload()
 	      jQuery(document).trigger('close.facebox');
 	      if (data.alert) {
-	        alert(data.alert);
+	        $.jGrowl(data.alert);
               }
  	      if (get_selected_<%= @resource_type %>().indexOf($('#<%= @resource_type %>_selection_id').html()) != -1){
 	        empty_summary('<%= @resource_type %>_selection', '<%= @resource_type == 'hosts' ? 'Host' : 'Storage Pool' %>')
