--- a/wui/src/app/views/hardware/show_vms.rhtml
+++ b/wui/src/app/views/hardware/show_vms.rhtml
@@ -18,7 +18,7 @@
               function(data,status){
                 $("#vmpools_grid").flexReload()
 		if (data.alert) {
-		  alert(data.alert);
+		  $.jGrowl(data.alert);
                 }
 		if (vm_pools.indexOf($('#vmpool_selection_id').html()) != -1){
 		  empty_summary('vmpool_selection', 'Virtual Machine Pool')
