--- a/wui/src/app/views/hardware/quick_summary.rhtml
+++ b/wui/src/app/views/hardware/quick_summary.rhtml
@@ -31,7 +31,7 @@
                                          :action => "quick_summary" %>',
                             <%= @pool.id %>)
 		if (data.alert) {
-		  alert(data.alert);
+		  $.jGrowl(data.alert);
                 }
                }, 'json');
     }
